# deep-learning-cpp

./: CMakeLists.txt  Doxyfile  PATTERNS.md  README.md  compile_run.sh
comparison/: breast_cancer.py  credit.py
datasets/cancer/: data.csv  data.json
docs/doxygen/html/: ActivationLayer_8h_source.html  Activations_8h_source.html  BCELoss_8h_source.html  CSVDataFrameFactory_8h_source.html  DataFrameFactory_8h_source.html  DataFrameIterator_8h_source.html  DataFrameUtils_8h_source.html  DataFrame_8h_source.html  EventManager_8h_source.html  IterableCollection_8h_source.html  Iterator_8h_source.html  JsonDataFrameFactory_8h_source.html  LearningFacade_8h_source.html  LinearLayer_8h_source.html  LossFunction_8h_source.html  LossPublisher_8h_source.html  LossSubscriber_8h_source.html  Module_8h_source.html  SequentialNN_8h_source.html  TerminalLossDisplay_8h_source.html  annotated.html  classActivationLayer-members.html  classActivationLayer.html  classActivationLayer__inherit__graph.map  classActivationLayer__inherit__graph.md5  classBinaryCrossEntropyLoss-members.html  classBinaryCrossEntropyLoss.html  classBinaryCrossEntropyLoss__coll__graph.md5  classBinaryCrossEntropyLoss__inherit__graph.map  (+95 more)
docs/sequence/: fac.txt  iter.txt
framework/data/: CMakeLists.txt  CSVDataFrameFactory.cpp  CSVDataFrameFactory.h  DataFrame.cpp  DataFrame.h  DataFrameFactory.h  DataFrameIterator.cpp  DataFrameIterator.h  DataFrameUtils.cpp  DataFrameUtils.h  IterableCollection.h  Iterator.h  JsonDataFrameFactory.cpp  JsonDataFrameFactory.h
framework/nn/: ActivationLayer.cpp  ActivationLayer.h  Activations.cpp  Activations.h  BCELoss.cpp  BCELoss.h  CMakeLists.txt  LinearLayer.cpp  LinearLayer.h  LossFunction.h  Module.h  SequentialNN.cpp  SequentialNN.h
framework/util/: CMakeLists.txt  EventManager.cpp  EventManager.h  LearningFacade.h  LossPublisher.cpp  LossPublisher.h  LossSubscriber.h  TerminalLossDisplay.cpp  TerminalLossDisplay.h
samples/: ds1.cpp  ds2.cpp
(+86 files in other folders)
